<resources>

    <string name="app_name">L&amp;F</string>
    <string name="app_name_long">Lost&amp;Found</string>
    <!-- Strings related to login -->
    <string name="prompt_id">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_id">学号不正确</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_field_required">请输入学号</string>
    <string name="title_activity_settings">设置</string>
    <string name="loading">加载中...</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通常</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="publish_type">
        <item>我要发布招领信息</item>
        <item>我要发布寻物信息</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">退出</string>
    <string name="home">主页</string>
    <string name="ILost">我要找物</string>
    <string name="IFound">我已拾物</string>
    <string name="logout">退出登录</string>
    <string name="loginnow">立即登录</string>
    <string name="nav_welcome"><![CDATA[Lost&Found欢迎您]]></string>
    <string name="nav_tip">登录获得更多权益</string>
    <string name="prompt_captcha">请输入验证码</string>
    <string name="error_incorrect_captcha">验证码错误</string>
    <string name="error_incorrect_sid">学号不存在</string>
    <string name="title_activity_publish">PublishActivity</string>
</resources>
