<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:id="@+id/navName"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#319aca"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/navSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_tip"
            android:textColor="#39bba5" />

        <Button
            android:id="@+id/navButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button_backgound"
            android:text="@string/loginnow" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#dddddd" />

</LinearLayout>

