<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_backgound"
    android:orientation="vertical"
    tools:context="edu.fjnu.cse.lostandfound.activity.LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/login_none"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:minHeight="370dp"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@mipmap/login_logo" />

                <AutoCompleteTextView
                    android:id="@+id/ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edit_backgound"
                    android:hint="@string/prompt_id"
                    android:maxLines="1"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="11dp"
                    android:singleLine="true"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/login_edit_backgound"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="11dp"
                    android:singleLine="true"
                    android:textAlignment="center" />


                <LinearLayout
                    android:id="@+id/captchaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/CaptchaText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_edit_backgound"
                        android:hint="@string/prompt_captcha"
                        android:imeActionId="@+id/login"
                        android:maxLines="1"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:paddingTop="11dp"
                        android:singleLine="true"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/captchaImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:padding="6dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/login_button_backgound"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
